testsuite/tests/interpreter_errors/invalid_field_dot_access/test.out
script.lkql:1:25: error: No such field
  1 | val p = select p when p.f_nonExistingField is ObjectDecl
    |                         ^^^^^^^^^^^^^^^^^^
